Service decomposition