@@ -14,6 +14,7 @@ import ru.skypro.teamwork.repository.DynamicRuleRepository;
 import ru.skypro.teamwork.service.DynamicRuleService;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -26,35 +27,7 @@ public class DynamicRuleServiceImpl implements DynamicRuleService {
     @Override
     @Transactional
     public DynamicRuleDto createRule(DynamicRuleRequest request) {
-        DynamicRule entity = new DynamicRule();
-        entity.setProductName(request.getProductName());
-        entity.setProductId(request.getProductId());
-        entity.setProductText(request.getProductText());
-
-        List<RuleCondition> conditions = new ArrayList<>();
-        if (request.getRule() != null) {
-            for (RuleConditionDto dto : request.getRule()) {
-                RuleCondition condition = new RuleCondition();
-                condition.setQuery(dto.getQuery());
-                condition.setNegate(dto.isNegate());
-                condition.setDynamicRule(entity);
-
-                List<RuleConditionArgument> argumentEntities = new ArrayList<>();
-                if (dto.getArguments() != null) {
-                    for (String arg : dto.getArguments()) {
-                        RuleConditionArgument argument = new RuleConditionArgument();
-                        argument.setArgument(arg);
-                        argument.setRuleCondition(condition);
-                        argumentEntities.add(argument);
-                    }
-                }
-                condition.setArguments(argumentEntities);
-
-                conditions.add(condition);
-            }
-        }
-        entity.setRule(conditions);
-
+        DynamicRule entity = buildEntityFromRequest(request);
         DynamicRule saved = repository.save(entity);
         return toDto(saved);
     }
@@ -62,9 +35,10 @@ public class DynamicRuleServiceImpl implements DynamicRuleService {
     @Override
     @Transactional(readOnly = true)
     public DynamicRuleListResponse getAllRules() {
-        List<DynamicRuleDto> data = repository.findAll().stream()
+        List<DynamicRuleDto> data = repository.findAll()
+                .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
         DynamicRuleListResponse resp = new DynamicRuleListResponse();
         resp.setData(data);
         return resp;
@@ -76,32 +50,83 @@ public class DynamicRuleServiceImpl implements DynamicRuleService {
         repository.deleteByProductId(productId);
     }
 
+    private DynamicRule buildEntityFromRequest(DynamicRuleRequest request) {
+        DynamicRule entity = new DynamicRule();
+        entity.setProductName(request.getProductName());
+        entity.setProductId(request.getProductId());
+        entity.setProductText(request.getProductText());
+        entity.setRule(buildConditions(request.getRule(), entity));
+        return entity;
+    }
+
+    private List<RuleCondition> buildConditions(List<RuleConditionDto> dtos, DynamicRule parent) {
+        if (dtos == null || dtos.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<RuleCondition> result = new ArrayList<>(dtos.size());
+        for (RuleConditionDto dto : dtos) {
+            result.add(buildCondition(dto, parent));
+        }
+        return result;
+    }
+
+    private RuleCondition buildCondition(RuleConditionDto dto, DynamicRule parent) {
+        RuleCondition condition = new RuleCondition();
+        condition.setQuery(dto.getQuery());
+        condition.setNegate(dto.isNegate());
+        condition.setDynamicRule(parent);
+        condition.setArguments(buildArguments(dto.getArguments(), condition));
+        return condition;
+    }
+
+    private List<RuleConditionArgument> buildArguments(List<String> args, RuleCondition parent) {
+        if (args == null || args.isEmpty()) {
+            return Collections.emptyList();
+        }
+        List<RuleConditionArgument> result = new ArrayList<>(args.size());
+        for (String raw : args) {
+            RuleConditionArgument a = new RuleConditionArgument();
+            a.setArgument(raw);
+            a.setRuleCondition(parent);
+            result.add(a);
+        }
+        return result;
+    }
+
     private DynamicRuleDto toDto(DynamicRule entity) {
         DynamicRuleDto dto = new DynamicRuleDto();
         dto.setId(entity.getId());
         dto.setProductName(entity.getProductName());
         dto.setProductId(entity.getProductId());
         dto.setProductText(entity.getProductText());
-
-        List<RuleConditionDto> ruleDtos = new ArrayList<>();
-        if (entity.getRule() != null) {
-            for (RuleCondition condition : entity.getRule()) {
-                RuleConditionDto c = new RuleConditionDto();
-                c.setQuery(condition.getQuery());
-
-                if (condition.getArguments() != null) {
-                    List<String> args = condition.getArguments().stream()
-                            .map(RuleConditionArgument::getArgument)
-                            .collect(Collectors.toList());
-                    c.setArguments(args);
-                } else {
-                    c.setArguments(new ArrayList<>());
-                }
-                c.setNegate(condition.isNegate());
-                ruleDtos.add(c);
-            }
-        }
-        dto.setRule(ruleDtos);
+        dto.setRule(mapConditions(entity.getRule()));
         return dto;
+    }
+
+    private List<RuleConditionDto> mapConditions(List<RuleCondition> conditions) {
+        if (conditions == null || conditions.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return conditions.stream()
+                .map(this::mapCondition)
+                .collect(Collectors.toList());
+    }
+
+    private RuleConditionDto mapCondition(RuleCondition condition) {
+        RuleConditionDto dto = new RuleConditionDto();
+        dto.setQuery(condition.getQuery());
+        dto.setNegate(condition.isNegate());
+        dto.setArguments(extractArguments(condition));
+        return dto;
+    }
+
+    private List<String> extractArguments(RuleCondition condition) {
+        if (condition.getArguments() == null) {
+            return Collections.emptyList();
+        }
+        return condition.getArguments()
+                .stream()
+                .map(RuleConditionArgument::getArgument)
+                .toList();
     }
 }
